// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Input > default Initialization > should match the snapshot with default props 1`] = `
<DocumentFragment>
  <div
    class="_input_ab7e9c _input--safetyTopPadding_ab7e9c"
    data-testid="input-component"
  >
    <div
      class="_fieldWrapper_3d96c9"
    >
      <div
        class="_fieldWrapper__main_3d96c9"
      >
        <input
          aria-invalid="false"
          aria-readonly="false"
          class="_inputBase_6ca9ba _inputBase--paddingLeft-default_6ca9ba _inputBase--paddingRight-default_6ca9ba _input__inputBase_ab7e9c"
          id="mocked-id"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input > initial with props > should match expected snapshots when rendered with various props > default props 1`] = `
<DocumentFragment>
  <div
    class="_input_ab7e9c _input--safetyTopPadding_ab7e9c"
    data-testid="input-component"
  >
    <div
      class="_fieldWrapper_3d96c9"
    >
      <div
        class="_fieldWrapper__main_3d96c9"
      >
        <input
          aria-invalid="false"
          aria-readonly="false"
          class="_inputBase_6ca9ba _inputBase--paddingLeft-default_6ca9ba _inputBase--paddingRight-default_6ca9ba _input__inputBase_ab7e9c"
          id="mocked-id"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input > initial with props > should match expected snapshots when rendered with various props > disabled state 1`] = `
<DocumentFragment>
  <div
    class="_input_ab7e9c _input--safetyTopPadding_ab7e9c"
    data-testid="input-component"
  >
    <div
      class="_fieldWrapper_3d96c9"
    >
      <div
        class="_fieldWrapper__main_3d96c9 _fieldWrapper__main--disabled_3d96c9"
      >
        <input
          aria-invalid="false"
          aria-readonly="false"
          class="_inputBase_6ca9ba _inputBase--paddingLeft-default_6ca9ba _inputBase--paddingRight-default_6ca9ba _input__inputBase_ab7e9c"
          disabled=""
          id="mocked-id"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input > initial with props > should match expected snapshots when rendered with various props > error state 1`] = `
<DocumentFragment>
  <div
    class="_input_ab7e9c _input--safetyTopPadding_ab7e9c"
    data-testid="input-component"
  >
    <div
      class="_fieldWrapper_3d96c9"
    >
      <div
        class="_fieldWrapper__main_3d96c9 _fieldWrapper__main--isError_3d96c9"
      >
        <input
          aria-invalid="true"
          aria-readonly="false"
          class="_inputBase_6ca9ba _inputBase--paddingLeft-default_6ca9ba _inputBase--paddingRight-default_6ca9ba _input__inputBase_ab7e9c"
          id="mocked-id"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input > initial with props > should match expected snapshots when rendered with various props > read-only state 1`] = `
<DocumentFragment>
  <div
    class="_input_ab7e9c _input--safetyTopPadding_ab7e9c"
    data-testid="input-component"
  >
    <div
      class="_fieldWrapper_3d96c9"
    >
      <div
        class="_fieldWrapper__main_3d96c9"
      >
        <input
          aria-invalid="false"
          aria-readonly="true"
          class="_inputBase_6ca9ba _inputBase--paddingLeft-default_6ca9ba _inputBase--paddingRight-default_6ca9ba _inputBase--readOnlyMode_6ca9ba _input__inputBase_ab7e9c"
          id="mocked-id"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input > initial with props > should match expected snapshots when rendered with various props > with PrefixIcon 1`] = `
<DocumentFragment>
  <div
    class="_input_ab7e9c _input--safetyTopPadding_ab7e9c"
    data-testid="input-component"
  >
    <div
      class="_fieldWrapper_3d96c9"
    >
      <div
        class="_fieldWrapper__main_3d96c9"
      >
        <div
          class="_input__prefixContainer_ab7e9c"
        >
          <div
            class="_input__staticPrefixIcon_ab7e9c"
          >
            <svg
              fill="none"
              height="20"
              viewBox="0 0 20 20"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M15.219 8.9194C15.218 5.4434 12.394 2.61841 8.91804 2.61541C5.44204 2.61341 2.61404 5.4354 2.60904 8.9114C2.60504 12.3964 5.43504 15.2284 8.92004 15.2254C12.395 15.2234 15.22 12.3944 15.219 8.9194ZM16.073 14.2394C17.084 15.2494 18.085 16.2494 19.086 17.2484C19.246 17.4084 19.406 17.5674 19.566 17.7284C20.12 18.2854 20.136 19.0984 19.605 19.6234C19.079 20.1424 18.274 20.1234 17.725 19.5764C16.619 18.4714 15.514 17.3654 14.41 16.2584C14.35 16.1994 14.305 16.1254 14.257 16.0644C10.269 19.0084 4.87604 18.1314 1.96404 14.4984C-0.88396 10.9464 -0.61296 5.81341 2.63604 2.60141C5.90304 -0.627595 10.963 -0.880595 14.535 2.01041C18.164 4.9454 18.97 10.3034 16.073 14.2394Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
        <input
          aria-invalid="false"
          aria-readonly="false"
          class="_inputBase_6ca9ba _inputBase--paddingLeft-none_6ca9ba _inputBase--paddingRight-default_6ca9ba _input__inputBase_ab7e9c"
          id="mocked-id"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input > initial with props > should match expected snapshots when rendered with various props > with placeholder and label 1`] = `
<DocumentFragment>
  <div
    class="_input_ab7e9c _input--safetyTopPadding_ab7e9c"
    data-testid="input-component"
  >
    <div
      class="_fieldWrapper_3d96c9"
    >
      <label
        class="_fieldWrapper__label_3d96c9"
        for="mocked-id"
      >
        Label text
      </label>
      <div
        class="_fieldWrapper__main_3d96c9"
      >
        <input
          aria-invalid="false"
          aria-readonly="false"
          class="_inputBase_6ca9ba _inputBase--paddingLeft-default_6ca9ba _inputBase--paddingRight-default_6ca9ba _input__inputBase_ab7e9c"
          id="mocked-id"
          placeholder="Placeholder"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input > initial with props > should match expected snapshots when rendered with various props > with value 1`] = `
<DocumentFragment>
  <div
    class="_input_ab7e9c _input--safetyTopPadding_ab7e9c"
    data-testid="input-component"
  >
    <div
      class="_fieldWrapper_3d96c9"
    >
      <label
        class="_fieldWrapper__label_3d96c9"
        for="mocked-id"
      >
        Label text
      </label>
      <div
        class="_fieldWrapper__main_3d96c9"
      >
        <input
          aria-invalid="false"
          aria-readonly="false"
          class="_inputBase_6ca9ba _inputBase--paddingLeft-default_6ca9ba _inputBase--paddingRight-default_6ca9ba _input__inputBase_ab7e9c"
          id="mocked-id"
          placeholder="Placeholder"
          type="text"
          value="Initial value"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
